fixed image not showing up issue

--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
-html body{
-    background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-vector%2Fcolorful-christmas-tiles-geometrical-design-vector_3384204.htm&psig=AOvVaw0BLuKWhmNW4Y8HH724XYRy&ust=1676394725669000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCKj2vpP_kv0CFQAAAAAdAAAAABAX);
+html body {
+    background: url("https://png.pngtree.com/thumb_back/fh260/background/20200214/pngtree-seamless-repeat-pattern-with-flowers-and-leaves-scandinavian-childish-drawing-background-image_329833.jpg");
+    opacity: 0.5;
 }
